# raylib-quickstart

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build-MinGW-W64.bat  build-VisualStudio2022.bat  build-VisualStudio2026.bat  build-cmake-MinGW-W64.bat  build-cmake-VisualStudio2022.bat  build-cmake-VisualStudio22.bat  build-cmake-make.sh  build-cmake-ninja.sh
include/: Mesh.h  Particle.h  Particle.hpp  Spring.h
resources/: perf_stats.txt
src/: Mesh.cpp  Particle.cpp  Spring.cpp  application.rc  camera_transform.c  camera_transform.h  camera_util.c  camera_util.h  draw_logic.c  draw_logic.h  fixed_math.c  fixed_math.h  gd.c  gd.h  gd_draw.c  gd_draw.h  gd_init.c  gd_init.h  gd_update.c  gd_update.h  gs.c  gs.h  gs_draw.c  gs_draw.h  gs_init.c  gs_init.h  gs_update.c  gs_update.h  item_types.c  item_types.h  main.c  main.cpp  math_util.c  math_util.h  perf.c  perf.h  shape_util.c  shape_util.h  update_logic.c  update_logic.h
